--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
     <script type="text/javascript">
         jQuery(document).ready(function ($) {
             $('.facet-view-simple').facetview({
-                search_url: "http://jplmemex-sce4.dyndns.org/solr/crawldb/query",
+                search_url: "http://polar.usc.edu/solr/searchable2/query",
                 search_index: "solr",
                 linkify: false,
                 default_operator: "AND",
